--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&family=Poppins:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Preahvihear&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Montserrat:wght@100;200;300;400;500;600;700&display=swap&family=Share+Tech+Mono&display=swap&family=Inter:wght@300;400;500;600;700&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-:root {
-    background-color: #11071F;
+* {
     scroll-behavior: smooth;
+}
+
+body {
+    height: 100%
+}
+.animated-text {
+    background: linear-gradient(to right, #FE8760, #BB4FC9); /* Replace with your gradient colors */
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
+.animated-text-light {
+    background: linear-gradient(to right, #0093E9, #80D0C7); /* Replace with your gradient colors */
+    -webkit-background-clip: text;
+    color: transparent;
 }
