--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Marvel:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nosifer&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html {
-    scroll-behavior: smooth;
+body {
+    background: #050505;
+    height: 100%;
 }
+
+
+.clip-path {
+    clip-path: polygon(31% 0, 31% 20%, 21% 33%, 21% 68%, 32% 81%, 33% 100%, 0 100%, 0% 70%, 0% 35%, 0 0);
+    border-radius: 10px;
+}
+
+.clip-path-2 {
+    clip-path: polygon(69% 0%, 69% 20%, 79% 33%, 79% 68%, 68% 81%, 67% 100%, 100% 100%, 100% 70%, 100% 35%, 100% 0%);
+    background-color: #000000}
